main.css
/* ... */
.fade {
  display: none;
}

#skills {
  display: flex;
  flex-direction: column;
}

/* HIDE THE IMAGES BY DEFAULT */
.myslides,
.arrows {
  display: none;
}

.slideText,
.numbertext {
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  color: #d4d4dc;
  font-size: 1rem;
}

/* DOTS AND BULLETS INDICATORS */
.dot {
  cursor: pointer;
  height: 0.5rem;
  width: 0.5rem;
  margin: 1rem 1rem;
  background-color: #d4d4dc;
  border-radius: 50%;
  display: inline-block;
  text-align: center;
  transition: background-color 0.6s ease;
}

.active {
  background-color: rgba(1, 255, 230, 0.763);
}
.dot:hover {
  background-color: teal;
}

/* FADING ANIMATION */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 2s;
  animation-name: fade;
  animation-duration: 2s;
}

@-webkit-keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

/*----------- TESTIMONIALS / QUOTES------- */
/*----------- TESTIMONIALS / QUOTES------- */

#quoteBox > section {
  position: absolute;
  /* padding: 2rem; */
}
.bottomBox {
  display: flex;
  flex-direction: column;
}
.bottom {
  flex: 1;
  height: 35rem;
}
#quoteBox p {
  padding: 0 6rem;
  font-size: 2.5rem;
  line-height: 3rem;
}
#quoteBox h4 {
  font-size: 1rem;
  padding: 0 8rem;
}
#quoteBox h2 {
  padding-bottom: 30rem;
}
.ref {
  text-align: right;
  height: 2em;
  padding-top: 3.5rem;
}
.bottom {
  border: 1px solid #1d1e22;
}

/*------------- CONTACT FORM ------- */
/*------------- CONTACT FORM ------- */
/* FORM CONTAINER */
/* 
        .userForm h3 {
            text-align: center;
            color: rgba(1, 255, 230, 0.763);
        } */
/* FORM STYLES */
/* input[name="name"] {
            grid-area: name;
        }
        input[name="emailUser"] {
            grid-area: emailUser;
        }
        textarea {
            grid-area: comment;
            height: 5rem;
            resize: none;
        }
        input[name="submit"] {
            grid-area: submit;
        }
        .formGrid {
            display: grid;
            width: 30rem;
            grid-template-areas:
                'name name emailUser emailUser'
                'comment comment comment comment'
                'submit submit submit submit';
            grid-gap: 1em;
            padding: 3em;
            display: -ms-grid; /* IE 10 */
/* } */

/* .formGrid input, .formGrid textarea {
            border: rgba(1, 255, 230, 0.763) .15em solid;
            font-family: "Open Sans", sans-serif;
            color: grey;
            font-size: .75em;
        }
        .formGrid::placeholder {
            font-weight: 900; */
/* }  */

.disclaimer {
  font-size: 10px;
}

/* MEDIA QUERIES / RESPOSINVE STYLES */
/* MEDIA QUERIES / RESPOSINVE STYLES */
@media only screen and (max-width: 800px) {
  /* TYPOGRAPHY */

  h2,
  h3,
  h4,
  h5,
  h6,
  a,
  .subtitle {
    letter-spacing: 0.1rem;
    font-size: 1rem;
  }

  p,
  .blurb {
    font-size: 1.25rem;
    line-height: 1.6;
  }

  br {
    display: none;
  }

  /* ---HEADER IMAGE--- */
  h1 {
    display: block;
    line-height: 2.5rem;
  }

  .heroText {
    padding: 3rem 0;
  }

  .Joy {
    font-size: 8rem;
    padding: 3rem 0 0 3rem;
  }

  .defOfJoy {
    font-size: 1.5rem;
    margin: 3rem 0 0 2rem;
    line-height: 1.6;
  }
  .definition {
    line-height: 1.8;
    font-size: 1.15rem;
    margin: 2rem;
    text-align: left;
  }

  /* --- MOBILE NAVBAR / BURGER TOGGLE--- */
  label {
    display: block;
    margin: 0 2rem;
  }

  #toggle:checked ~ .menu {
    display: flex;
    flex-direction: column;
    justify-content: justify;
  }

  .menu {
    text-align: center;
    width: 100%;
    z-index: 1;
    margin: 0 0 28rem 0;
    padding: 0;
    box-shadow: 0px 1px 1px rgba(1, 255, 230, 0.2);
    position: absolute;
    background: rgba(0, 0, 0, 0.75);
    display: none; /*should appear upon burger click*/
  }

  .menu a {
    margin: 0;
  }

  .burger {
    color: #d4d4dc;
    font-size: 2.5rem;
    display: block;
    position: absolute;
    bottom: 0;
    right: 0;
  }

  .burger:hover,
  .menu a:hover {
    cursor: pointer;
    color: rgba(1, 255, 230, 0.763);
    transition: color 0.5s ease;
    border-top: none;
  }

  .logo {
    font-size: 0.5em;
    margin: 0 4em;
  }

  /* MAKE ALL SIDE BY SIDE SECTIONS STACK ON TOP OF EACH OTHER FLEX/GRID */

  /* PORTFOLIO / SECTION 1 */
  .portfolio {
    display: grid;
    width: 100%;
    grid-gap: 2em;
    grid-template-areas:
      'proj0'
      'proj1'
      'proj2'
      'proj3';
    align-items: center;
  }
  .blurb {
    font-family: 'Open Sans', sans-serif;
    color: #d4d4dc;
    margin: 1rem;
  }
  /* ABOUT - SKILLS - QUOTES - CONTACT / SECTION 2 */
  .aboutContactTest {
    display: flex;
    flex-direction: column;
    justify-items: center;
  }
  #about p,
  #skills p {
    padding: 0 0.25rem;
    font-size: 1.15rem;
    line-height: 1.8;
  }
  .social a {
    font-size: 2rem;
    text-decoration: none;
    color: #d4d4dc;
    margin: 0;
  }
  .social a:hover {
    cursor: pointer;
    color: rgba(1, 255, 230, 0.763);
  }

  /* CAROUSEL IMAGES */
  .mySlides img {
    max-height: 10rem;
    width: auto;
    background-repeat: none;
    background-position: center;
    background-size: cover;
  }

  /* TESTIMONIALS RESPONSIVE */
  #quoteBox {
    height: 50rem;
  }
  #quoteBox h2 {
    font-size: 0.75rem;
    padding-bottom: 45rem;
  }

  #quoteBox p {
    font-size: 1rem;
    line-height: 1.5rem;
  }
  #quoteBox h4 {
    font-size: 0.25rem;
  }

  /* CONTACT FORM SUBMISSION */
  .formGrid {
    display: grid;
    width: 100%;
    grid-template-areas:
      'name'
      'emailUser'
      'comment'
      'submit';
    grid-gap: 0.25rem;
    padding: 0.25rem;
    display: -ms-grid; /* IE 10 */
  }
}

